--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="row align-items-center">
           <div class="col-lg-5 mb-4 mb-lg-0">
             <img
-              src="https://placehold.co/600x700?text=Casual+professional+photo+of+IT+specialist+working+on+laptop+in+modern+minimalist+office+with+natural+lighting"
+              src="foto.jpeg"
               alt="Casual professional photo of IT specialist working on laptop in modern office"
               class="img-fluid rounded shadow-lg"
             />
@@ -654,7 +654,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="card portfolio-card h-100">
               <img
-                src="internal-system.png"
+                src="absen.png"
                 alt="Internal Business System"
                 class="card-img-top"
               />
@@ -870,7 +870,7 @@
               <div class="row align-items-center">
                 <div class="col-md-5 mb-3 mb-md-0">
                   <img
-                    src="https://placehold.co/500x400?text=Sky+Children+of+the+Light+game+screenshot+with+flying+characters+in+beautiful+ethereal+clouds+magical+atmosphere+glowing+sky+realm"
+                    src="sky.jpg"
                     alt="Sky Children of the Light game screenshot with flying characters in ethereal clouds"
                     class="img-fluid rounded shadow"
                   />
