--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
-            <h1 class="display-4 fw-bold mb-3 fade-in">
+            <h1 class="display-4 fw-bold mb-3 mt-4 fade-in">
               Hi, Saya <span class="text-primary">Faisal Aditya Rahman</span>
             </h1>
             <h2 class="h3 mb-4 fade-in-delay-1">
